--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
-    "react-native-svg": "^12.1.0",
-    "whois": "^2.12.1"
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
